[package]
name = "ecs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-ecs = "0.11.0"
aws-config = "0.11.0"
structopt = "0.3"
tracing-subscriber = "0.3.5"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.17", features = ["derive"] }

